# msr-report

./: .gitignore  README.md  pyproject.toml
src/msr/: brand.py  cli.py
src/msr/charts/: assignment.py  bar.py  radar.py  table.py  theme.py  utils.py
src/msr/commands/: charts.py  charts_from_yaml.py  rendering.py  utils.py
src/msr/config/: assignment_yaml.py
src/msr/data/: loaders.py  manifest.py
src/msr/html/: builder.py
src/msr/pdf/: html_to_pdf.py
src/msr/utils/: paths.py  templating.py
src/msr_report.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/msr_v2/: assign.py  cli_v2.py  config.py  theme.py
src/msr_v2/charts/: bar.py  base.py  column.py  radar.py  table.py
src/templates/assets/css/: brand.css
src/templates/html/: base.html.j2
